--- a/3rdCourse2HalfPR1.ipynb
+++ b/3rdCourse2HalfPR1.ipynb
@@ -114,10 +114,10 @@
     "                    A[i][j] = matrixStart\n",
     "                matrixStart = matrixStart + matrixStep\n",
     "\n",
-    "        for i in range(len(A)):         # len(A) - возвращает количество строк в матрице А\n",
-    "            for j in range(len(A[i])):  # len(A[i]) - возвращает количество элементов в строке i\n",
+    "        for i in range(len(A)):         \n",
+    "            for j in range(len(A[i])):  \n",
     "                print(A[i][j], end = ' ')\n",
-    "            print()                     # делаем переход на новую строку \n",
+    "            print()                     \n",
     "\n",
     "        \n"
    ]
@@ -147,43 +147,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 117,
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Введите номер функции: 1 - калькулятор, 2 - подсчет в строке, 3 - матрица.\n",
-      "Вы выбрали функцию 1\n",
-      "Введите первое число.\n",
-      "Введите второе число\n",
-      "Введите требуемый знак.\n",
-      "None\n",
-      "Введите номер функции: 1 - калькулятор, 2 - подсчет в строке, 3 - матрица.\n",
-      "Вы выбрали функцию 1\n",
-      "Введите первое число.\n",
-      "Введите второе число\n",
-      "Введите требуемый знак.\n",
-      "2\n",
-      "Введите номер функции: 1 - калькулятор, 2 - подсчет в строке, 3 - матрица.\n",
-      "Error\n"
-     ]
-    }
-   ],
    "source": [
     "Menu()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -191,7 +161,8 @@
    "hash": "ae0c3f29f6717127eeb0478e1269490f065a5b5c685a044e1609264ecf45b36c"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -204,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
